src/app/speech/containers/view-speech/view-speech.component.scss
@import 'main';


/* EMPTY MESSAGE */
.empty-message {
  height: 40vh;

  span:first-child { font-size: 16px; }

  span:last-child {
    font-size: 15px;
    position: relative;
    top: -20px;
  }
}

/* TABS */
.tabs {
  padding: 0 17px;

  select {
    @include max-media(991px) {
      & { display: block !important; }
    }

    display: none;
  }

  ul {
    @include max-media(991px) {
      & { display: none; }
    }
  }

  li { padding: 10px; }

  li.active {
    color: color-yiq($light-primary);
    font-weight: bold;
    background: $light-primary;
  }
}

